<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) ScreenCastPro 2017.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_category_video_settings_title">
        <ListPreference
            android:defaultValue="1440x2560"
            android:entries="@array/resolutionValues"
            android:entryValues="@array/resolutionValues"
            android:key="@string/res_key"
            android:summary="@string/preference_resolution_summary"
            android:title="@string/preference_resolution_title" />

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/fpsArray"
            android:entryValues="@array/fpsArray"
            android:key="@string/fps_key"
            android:summary="@string/preference_fps_summary"
            android:title="@string/preference_fps_title" />

        <ListPreference
            android:defaultValue="7130317"
            android:entries="@array/bitrateArray"
            android:entryValues="@array/bitratesValue"
            android:key="@string/bitrate_key"
            android:summary="@string/preference_bit_summary"
            android:title="@string/preference_bit_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_audio_settings_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/audiorec_key"
            android:summary="@string/preference_audio_record_summary"
            android:title="@string/preference_audio_record_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_save_options_title">
        <com.openapps.screenrecorderpro.folderpicker.FolderChooser
            android:key="@string/savelocation_key"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/preference_save_location_title" />
        <ListPreference
            android:defaultValue="yyyyMMdd_hhmmss"
            android:entries="@array/filename"
            android:entryValues="@array/filename"
            android:key="@string/filename_key"
            android:title="@string/preference_filename_format_title" />
        <EditTextPreference
            android:defaultValue="recording"
            android:key="@string/fileprefix_key"
            android:summary="Enter a prefix for the saved file name"
            android:title="@string/preference_filename_prefix_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_category_misc_title">
        <CheckBoxPreference
            android:title="@string/preference_floating_control_title"
            android:summary="@string/preference_floating_control_summary"
            android:key="@string/preference_floating_control_key"
            android:defaultValue="false" />
        <!--<CheckBoxPreference
            android:title="@string/preference_show_touch_title"
            android:summary="@string/preference_show_touch_summary"
            android:key="@string/preference_show_touch_key"
            android:defaultValue="false" />-->
        <Preference
            android:title=""
            android:summary=""
            android:visibility="invisible" />
    </PreferenceCategory>
</PreferenceScreen>